--- a/index.html
+++ b/index.html
@@ -17,9 +17,24 @@
         <div class="nav__inner">
             <a href="">My website</a>
 
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24">
-                <path fill="none" d="M0 0h24v24H0z" />
-                <path d="M3 4h18v2H3V4zm6 7h12v2H9v-2zm-6 7h18v2H3v-2z" />
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" height="24" width="24">
+
+                <g class="nc-int-icon js-nc-int-icon nc-int-icon-rotate">
+
+                    <g class="nc-int-icon-a">
+                        <path fill="none" d="M0 0h24v24H0z"></path>
+                        <path d="M3 4h18v2H3V4zm6 7h12v2H9v-2zm-6 7h18v2H3v-2z"></path>
+                    </g>
+
+                    <g class="nc-int-icon-b">
+                        <path fill="none" d="M0 0h24v24H0z"></path>
+                        <path
+                            d="M12 10.586l4.95-4.95 1.414 1.414-4.95 4.95 4.95 4.95-1.414 1.414-4.95-4.95-4.95 4.95-1.414-1.414 4.95-4.95-4.95-4.95L7.05 5.636z">
+                        </path>
+                    </g>
+
+                </g>
+
             </svg>
 
             <ul>
